compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_from_use_expression_with_type_annotations.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  use a: Int, b: Int <- wibble(1, 2)\n  todo\n}\n\nfn wibble(n, m, f) {\n    f(1, 2)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  use a: Int, b: Int <- wibble(1, 2)
                     ▔▔▔↑           
  todo
}

fn wibble(n, m, f) {
    f(1, 2)
}


----- AFTER ACTION

pub fn main() {
  wibble(1, 2, fn(a: Int, b: Int) {
    todo
  })
}

fn wibble(n, m, f) {
    f(1, 2)
}
