compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_inner_let_assert_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(r#\"pub fn main() {\n    let assert [wibble] = {\n        let assert Ok(wobble) = {\n            Ok(1)\n        }\n        [wobble]\n    }\n}\"#,\n    2, CONVERT_TO_CASE)"
---
pub fn main() {
    let assert [wibble] = {
        let wobble = case {
            Ok(1)
        } {
          Ok(wobble) -> wobble
          _ -> panic
        }
        [wobble]
    }
}
