compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_bit_array_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(\"\npub fn main() {\n  let assert <<bits1, bits2>> = <<73, 98>>\n}\n\",\n    2, CONVERT_TO_CASE)"
---
pub fn main() {
  let #(bits1, bits2) = case <<73, 98>> {
    <<bits1, bits2>> -> #(bits1, bits2)
    _ -> panic
  }
}
