compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_string_prefix_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(r#\"\npub fn main() {\n  let assert \"_\" <> thing = \"_Hello\"\n}\"#,\n    2, CONVERT_TO_CASE)"
---
pub fn main() {
  let thing = case "_Hello" {
    "_" <> thing -> thing
    _ -> panic
  }
}
