compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_to_case_discard.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(\"\npub fn main() {\n  let assert [_elem] = [6]\n}\n\",\n    2, CONVERT_TO_CASE)"
---
pub fn main() {
  let _ = case [6] {
    [_elem] -> Nil
    _ -> panic
  }
}
