compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_let_assert_tuple_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(\"\npub fn main() {\n   let assert #(first, 10, third) = #(5, 10, 15)\n}\n\",\n    2, CONVERT_TO_CASE)"
---
pub fn main() {
   let #(first, third) = case #(5, 10, 15) {
     #(first, 10, third) -> #(first, third)
     _ -> panic
   }
}
