compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_outer_let_assert_to_case.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "apply_first_code_action_with_title(r#\"pub fn main() {\n    let assert [wibble] = {\n        let assert Ok(wobble) = {\n            Ok(1)\n        }\n        [wobble]\n    }\n}\"#,\n    1, CONVERT_TO_CASE)"
---
pub fn main() {
    let wibble = case {
        let assert Ok(wobble) = {
            Ok(1)
        }
        [wobble]
    } {
      [wibble] -> wibble
      _ -> panic
    }
}
