compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_function_call_works_when_piping_a_module_select.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble.wobble |> woo(_)\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble.wobble |> woo(_)
                   ↑     
}


----- AFTER ACTION

pub fn main() {
  woo(wibble.wobble)
}
