compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__convert_to_function_call_works_with_echo.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "\npub fn main() {\n  wibble.wobble |> echo\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  wibble.wobble |> echo
                   ↑   
}


----- AFTER ACTION

pub fn main() {
  echo wibble.wobble
}
